# stt-voicepack-xiao_ya

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
installer/: README.txt  install.bat  stt_xiao_ya.iss  uninstall.bat
stt_sapi5/: Cargo.toml  build.rs
stt_sapi5/src/: lib.rs
stt_sapi5/windows_tts_engine/: Cargo.toml  build.rs
stt_sapi5/windows_tts_engine/src/: com_server.rs  detect_languages.rs  lib.rs  logging.rs  utils.rs  voices.rs
