[workspace]
members = [
    "stt_sapi5",
    "stt_sapi5/windows_tts_engine",
]
exclude = ["rust_smoke_test", "lej77_ref"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["STT Voice Pack Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RuofanYou/stt-voicepack-xiao_ya"

[workspace.dependencies]
windows-core = "0.59.0"
windows = "0.59.0"
winresource = "0.1.19"
log = "0.4.25"

[profile.release]
# Tuned for fast CI builds — sherpa-onnx static link + LTO blew past 45 min.
# Prefer larger binary over build-time blowup: it's a one-time download.
opt-level = 3
lto = false
codegen-units = 16
strip = true
panic = "unwind"
incremental = false
