[package]
name = "stt_sapi5_xiao_ya"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"
description = "STT xiao_ya Chinese SAPI5 voice DLL (sherpa-onnx backend)"

[lib]
name = "stt_xiao_ya_sapi5"
crate-type = ["cdylib"]

[features]
default = []
# Disable any logging in release mode
disable_logging_in_release = [
    "windows_tts_engine/disable_logging_in_release",
    "log/release_max_level_off",
]

[dependencies]
windows_tts_engine = { path = "./windows_tts_engine" }
log = { workspace = true }
sherpa-rs = { version = "0.6", features = ["tts"] }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Media_Speech",
    "Win32_Media_Audio",
]

[build-dependencies]
winresource = { workspace = true }
